# botsley

./: README.md  main.py  pyproject.toml  requirements.txt  setup.py
assets/: Counting.bws  Travel.bws  blocks.yml  blox.bb  bob.yml  cleavers.yml  hello.mia
botsley/: app.py  assets.py  data.py  logging.py  version.py
botsley/application/: __init__.py
botsley/command/: __init__.py  compile.py
botsley/compile/: compiler.py  compilerbase.py  policy.py  token.py  visitor.py
botsley/run/: __init__ (copy).py  __init__.py  (+14 more)
botsley_setup/: develop.py  install.py
data/: BloxAchieve.bws  RuleTest.bws  SelectTest.bws  SequenceTest.bws  blox.mia  turtles.mia
examples/wyggles/: README.md  main.py  pyproject.toml
examples/wyggles/assets/: images.json  images.tsx  level1.json  level1.tmx  tiles.json
examples/wyggles/wyggles/: __init__.py  app.py  assets.py  ball.py  beacon.py  box.py  brain.py  dna.py  engine.py  fruit.py  layer.py  mathutils.py  sprite.py
examples/wyggles/wyggles/wyggle/: __init__.py  brain.py  dna.py  wyggle.py
examples/wyggles/wyggles/wyggle/behaviors/: see.py
examples/wyggles/wyggles/wyggle/brains/: behavior.py  default.py  neuron.py  proto2.py  proto3.py  reactive.py
tests/: common.py  conftest.py  test_action.py  test_agent.py  test_agent_tree.py  test_clause.py  test_compiler.py  test_context.py  test_counter.py  test_lexer.py  test_loop.py  test_message.py  test_neuron.py  test_node.py  test_parallel.py  test_parser.py  test_policy.py  test_qfilter.py  test_qnegclause.py  test_qtyped.py  test_query.py  test_rule.py  test_selector.py  test_sequence.py  test_sleep.py  test_subscription.py  test_term.py  test_trigger.py  test_utility.py  test_xtra.py  test_yamlcontext.py
(+27 files in other folders)
