[tool.poetry]
name = "wyggles"
version = "0.1.0"
description = ""
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
arcade = "^2.6.17"
pycairo = "^1.25.1"
botsley = {path = "../..", develop = true}
numpy = "^1.26.2"
loguru = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
